[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mqtt-audit"
version = "0.1.0"
description = "MQTT broker security auditor"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "isecwire GmbH", email = "tools@isecwire.com" },
]
dependencies = [
    "paho-mqtt>=2.0",
]
