[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mqtt-audit"
version = "1.0.0"
description = "MQTT broker security auditor — tests for anonymous access, weak ACLs, missing TLS, default credentials, payload inspection, protocol abuse, ACL mapping, and common misconfigurations."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "isecwire GmbH", email = "tools@isecwire.com" },
]
keywords = ["mqtt", "security", "audit", "iot", "broker", "pentest", "scada", "iiot"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Networking",
]
dependencies = [
    "paho-mqtt>=2.0",
    "rich>=13.0",
]

[project.scripts]
mqtt-audit = "mqtt_audit.cli:main"

[project.urls]
Homepage = "https://github.com/isecwire/mqtt-audit"
Issues = "https://github.com/isecwire/mqtt-audit/issues"

[tool.setuptools]
packages = ["mqtt_audit"]

[tool.setuptools.package-data]
mqtt_audit = ["wordlists/*.txt"]
